updated issues. inserted data.fixer.io api. aligned cotainer edges.

--- a/css/style-index.css
+++ b/css/style-index.css
@@ -25,7 +25,7 @@ p {
 
 .legend {
     font-size: 1.2em;
-    font-weight: 300;
+    font-weight: 400;
     color: white;
     text-align: center;
 }
